--- a/Custom.css
+++ b/Custom.css
@@ -222,3 +222,7 @@
     box-shadow: inset 0 0 10px 1px hsla(0, 0%, 100%, 0.4);
     color: #fff;
 }
+
+#chat-messages {
+    border-bottom: #ff0000 2px solid;
+}
