--- a/Theme.css
+++ b/Theme.css
@@ -70,7 +70,7 @@
 }
 
 #rcs-style-anchor-1.toggled:before {
-    content: '';
+    content: 'https://cdn.discordapp.com/attachments/403538022374572034/539087363071016990/FearFoxY_Producer_Event.png';
 }
 
 #rcs-style-anchor-1.toggled {
