--- a/Theme.css
+++ b/Theme.css
@@ -64,7 +64,7 @@
     top: 8px;
     left: 8px;
     font-family: 'fontawesome';
-    content: 'https://cdn.discordapp.com/attachments/403538022374572034/539087363071016990/FearFoxY_Producer_Event.png';
+    content: 'https://i.imgur.com/Mc4chfw.jpg';
     font-size: 16px;
     color: #21b1af;
 }
