--- a/Theme.css
+++ b/Theme.css
@@ -878,7 +878,7 @@
 }
 
 .community__share-room:after {
-    background-image: url();
+    background-image: url(https://i.imgur.com/YT3yc30.jpg?1);
     background-repeat: no-repeat;
     content: "JOIN US DISCORD, MC SERVER IP: ROYALNETWORK.ML AND CHECK MUSIC.FEARFOXY.COM";
     display: inline-block;
