--- a/Theme.css
+++ b/Theme.css
@@ -1,30 +1,32 @@
+/* Announcements */
+
 #rcs-style-anchor-2 {
-    background-color: rgba(0, 0, 0, 0.9);
-    border-radius: 10px;
-    border: 3px solid #ff0000;
+    background-color: rgba(0, 0, 0, 0.9) ;
+    border-radius: 5px ;
+    border: 1px solid #ff0000;
     position: absolute;
     top: 55px;
-    left: 55px;
+    right: 355px ;
     z-index: 9;
     cursor: pointer;
-    height: 52px;
-    width: 230px;
+    height: 90px ;
+    width: 230px ;
 }
 
 #rcs-style-anchor-2:before {
     display: block;
     position: absolute;
-    top: 5px;
-    left: 5px;
+    top: 8px;
+    left: 8px;
     font-family: 'fontawesome';
-    content: 'Welcome To FearFoxy!';
-    font-size: 15px;
-    color: #21b1af;
+    content: ' Announcements';
+    font-size: 16px;
+    color: #ff0000;
 }
 
 #rcs-style-anchor-2.toggled {
-    height: 50px;
-    width: 155px;
+    height: 35px ;
+    width: 150px ;
 }
 
 #rcs-style-anchor-2.toggled:after {
@@ -32,8 +34,8 @@
 }
 
 #rcs-style-anchor-2:after {
-    content: 'Enjoy our community!';
-    margin: 30px 0px 0px 5px;
+    content: "We are looking for new team, apply here https://goo.gl/XqXkAT";
+    margin: 30px 0px 0px 10px;
     position: absolute;
 }
 
