--- a/Developer.css
+++ b/Developer.css
@@ -75,7 +75,7 @@
 }
 
 #user-rollover.id-3669054 .meta:before {
-    content: url("https://i.imgur.com/lVc7TDE.jpg?1");
+    content: url("https://i.imgur.com/YT3yc30.jpg?1");
     top: 190px;
     left: 109px;
     position: absolute;
@@ -87,8 +87,4 @@
     position: absolute;
     top: 190px;
     left: 130px;
-}
-
-div.is-promoter.can-mention.can-friend.can-ignore.expand.chat.id-3669054.is-coffee-supporter.is-bronze-supporter.role-promoter.role-host.role-subscriber {
-    top: 175px;
 }
