--- a/Custom.css
+++ b/Custom.css
@@ -4,12 +4,12 @@
 
 .log:after {
     position: relative;
-    font-family: Arial;
+    font-family: Black Streamer;
     margin-left: 10px;
     font-size: 11px;
     width: 300px;
     box-sizing: border-box;
-    content: "☯F E A R F O X Y☯™ | PlugThemed - red: V 4.9.9.1!";
+    content: "☯F E A R F O X Y☯™ | PlugThemed - red: V 5.0.9.4!";
     font-weight: bold;
     padding: 5px;
     background-color: rgb(255, 0, 0);
@@ -23,7 +23,7 @@
 #chat .cm.welcome {
     top: 5px;
     position: relative;
-    font-family: Arial;
+    font-family: Black Streamer;
     margin-left: 0px;
     font-size: 12px;
     width: 300px;
