--- a/Theme.css
+++ b/Theme.css
@@ -880,7 +880,7 @@
 .community__share-room:after {
     background-image: url(https://i.imgur.com/YT3yc30.jpg?1);
     background-repeat: no-repeat;
-    content: "JOIN US DISCORD, MC SERVER IP: ROYALNETWORK.ML AND CHECK MUSIC.FEARFOXY.COM";
+    content: "JOIN US DISCORD, CHECK MUSIC.FEARFOXY.COM";
     display: inline-block;
     color: #ff0!important;
     font-weight: 500;
