--- a/Theme.css
+++ b/Theme.css
@@ -472,17 +472,17 @@
 }
 
 .nav-left.shown {
-    background: url("https://i.imgur.com/H1j6L3s.jpg") no-repeat ;
+    background: url("https://i.imgur.com/u1UNHll.jpg") no-repeat ;
     background-size: cover ;
 }
 
 #app .logo-wrapper .plugdj-logo {
-    background: url("https://i.imgur.com/0gcqGVE.jpg?1") no-repeat;
+    background: url("https://i.imgur.com/YT3yc30.jpg?1") no-repeat;
     background-size: 21px 21px ;
 }
 
 .nav-left__top .plugdj-logo {
-    background: url("https://i.imgur.com/0gcqGVE.jpg?1") no-repeat 0 0;
+    background: url("https://i.imgur.com/YT3yc30.jpg?1") no-repeat 0 0;
     background-size: 25px 25px ;
 }
 
