--- a/Promoter.css
+++ b/Promoter.css
@@ -156,19 +156,17 @@
     background: url("https://i.imgur.com/LZgFvsZ.png");
 }
 
-/*#####[Bouncers]#####*/
-
 /* Freyr */
 
-.icon-chat-bouncer {
-    background: url("https://i.imgur.com/srpiwR1.png");
+.icon-chat-manager {
+    background: url("https://i.imgur.com/xQsRBMB.png");
 }
 
-.icon-chat-bouncer+span, #user-lists .group.bouncer~.user span, #dialog-user-role .role-menu .menu ul .bouncer span {
+.icon-chat-manager+span, #user-lists .group.manager~.user span, #dialog-user-role .role-menu .menu ul .manager span {
     color: #0078c7;
 }
 
-#user-lists .group.bouncer {
+#user-lists .group.manager {
     color: #0078c7;
     background: linear-gradient(to right, hsla(360, 100%, 30%, 0.5), hsla(360, 100%, 40%, 0.5));
     top: 1px;
@@ -181,7 +179,7 @@
 
 #user-rollover.id-5266523>.info>.role span:after {
     text-indent: 0;
-    content: 'Bouncer';
+    content: 'Manager';
     display: block;
     line-height: initial;
     color: #0078c7;
@@ -196,7 +194,7 @@
 }
 
 #user-rollover.id-5266523>.info>.role .icon {
-    background: url("https://i.imgur.com/srpiwR1.png");
+    background: url("https://i.imgur.com/xQsRBMB.png");
 }
 
 #user-rollover.id-5266523>.info>.role:hover .icon {
