--- a/Theme.css
+++ b/Theme.css
@@ -64,7 +64,7 @@
 }
 
 #rcs-style-anchor-1:after {
-    content: 'https://i.imgur.com/Mc4chfw.jpg';
+    content: 'Soon comes again more events';
     margin: 30px 0px 0px 10px;
     position: absolute;
 }
