--- a/Theme.css
+++ b/Theme.css
@@ -878,7 +878,7 @@
 }
 
 .community__share-room:after {
-    background-image: url();
+    background-image: url(https://i.imgur.com/a4fn1hj.png);
     background-repeat: no-repeat;
     content: "Join us discord, copyrighted 2019";
     display: inline-block;
