--- a/Promoter.css
+++ b/Promoter.css
@@ -92,7 +92,7 @@
 }
 
 #user-rollover.id-5266523>.info>.role .icon {
-    background: url("https://i.imgur.com/xQsRBMB.png");
+    background: url("https://i.imgur.com/WqmVmlZ.png");
 }
 
 #user-rollover.id-5266523>.info>.role:hover .icon {
