--- a/Supporters.css
+++ b/Supporters.css
@@ -21,7 +21,7 @@
 #user-rollover.id-40796598 .level:after {
     background-image: url(https://i.imgur.com/a2zR8CP.png);
     background-repeat: no-repeat;
-    content: "FearFoxy";
+    content: "TUSF";
     display: inline-block;
     color: #ff0000;
     font-weight: bold;
