--- a/Developer.css
+++ b/Developer.css
@@ -21,7 +21,7 @@
 #user-rollover.id-3669054 .level:after {
     background-image: url();
     background-repeat: no-repeat;
-    content: "FearFoxy";
+    content: "TUSF";
     display: inline-block;
     color: #ff0000;
     font-weight: bold;
