--- a/Theme.css
+++ b/Theme.css
@@ -353,7 +353,7 @@
 /* --------------------------------------- icon --------------------------------------- */
 
 .icon {
-    background-image: url("https://i.imgur.com/PpWvor1.png");
+    background-image: url("https://i.imgur.com/8bspLCF.png");
 }
 
 /* --------------------------------------- Katsetused --------------------------------------- */
