--- a/Theme.css
+++ b/Theme.css
@@ -1,52 +1,12 @@
 /* Announcements */
-
-#rcs-style-anchor-2 {
-    background-color: rgba(0, 0, 0, 0.9) ;
-    border-radius: 5px ;
-    border: 1px solid #ff0000;
-    position: absolute;
-    top: 55px;
-    right: 355px ;
-    z-index: 9;
-    cursor: pointer;
-    height: 90px ;
-    width: 230px ;
-}
-
-#rcs-style-anchor-2:before {
-    display: block;
-    position: absolute;
-    top: 8px;
-    left: 8px;
-    font-family: 'fontawesome';
-    content: ' Announcements';
-    font-size: 16px;
-    color: #ff0000;
-}
-
-#rcs-style-anchor-2.toggled {
-    height: 35px ;
-    width: 150px ;
-}
-
-#rcs-style-anchor-2.toggled:after {
-    content: '';
-}
-
-#rcs-style-anchor-2:after {
-    content: "We are looking for new team, apply here https://goo.gl/XqXkAT";
-    margin: 30px 0px 0px 10px;
-    position: absolute;
-}
-
 #rcs-style-anchor-1 {
     background-color: rgba(0, 0, 0, 0.9) ;
     border-radius: 5px ;
     border: 3px solid #ff0000 ;
     position: absolute;
-    height: 52px ;
+    height: 335px ;
     width: 230px ;
-    top: 180px;
+    top: 50px;
     z-index: 9;
     cursor: pointer;
     right: 355px ;
@@ -58,14 +18,14 @@
     top: 8px;
     left: 8px;
     font-family: 'fontawesome';
-    content: ' Events';
+    content: ' Event';
     font-size: 16px;
     color: #ff0000;
 }
 
 #rcs-style-anchor-1:after {
-    content: 'Soon comes again more events';
-    margin: 30px 0px 0px 10px;
+    content: url('  ');
+    margin: 30px 0px 0px 0px;
     position: absolute;
 }
 
@@ -74,6 +34,15 @@
     width: 85px ;
 }
 
+#rcs-style-anchor-1.toggled:after {
+    content: '';
+}
+
+#rcs-style-anchor-1:after {
+    content: url();
+    width: 100px;
+    height: 100px;
+}
 #rcs-style-anchor-1.toggled:after {
     content: '';
 }
