--- a/Users.css
+++ b/Users.css
@@ -34,7 +34,7 @@ left : 130px;
 height : 170px !important ;
 }
 
-#user-rollover.id-4849359 .meta:after {
+#user-rollover.id-44218992 .meta:after {
 content : '\A Discord Linked';
 white-space : pre-wrap;
 color : #808691;
@@ -56,148 +56,50 @@ left : 130px;
     font-size: 11px;
 }
 
-/* Bloom */
-
-#user-lists .list .user.id-3148591 .name:after, #user-rollover.id-3148591 .meta .username:after, #chat [data-cid^='3148591-'] .un:after {
-    content: "Helper/Best Ba";
-    margin-left: 5px;
-    background: rgba(0, 0, 0, .5);
-    padding: 0px 5px;
-    border: 2px solid #ff0000;
-    border-radius: 5px;
-    color: #ccc;
-    font-size: 11px;
+#user-rollover.id-44172088 .meta:before {
+content : url(https://i.imgur.com/wicLrfT.png);
+top : 130px;
+left : 109px;
+position : absolute;
 }
 
-/* SpriteG */
-
-#user-lists .list .user.id-8703069 .name:after, #user-rollover.id-8703069 .meta .username:after, #chat [data-cid^='8703069-'] .un:after {
-    content: "Helper";
-    margin-left: 5px;
-    background: rgba(0, 0, 0, .5);
-    padding: 0px 5px;
-    border: 2px solid #ff0000;
-    border-radius: 5px;
-    color: #ccc;
-    font-size: 11px;
+#user-rollover.id-44172088 .meta:after {
+content : 'Discord Linked';
+white-space : pre-wrap;
+color : #808691;
+position : absolute;
+top : 130px;
+left : 130px;
 }
 
-/* Kimps ~ Hardstyle Heaven */
-
-#user-lists .list .user.id-7895511 .name:after, #user-rollover.id-7895511 .meta .username:after, #chat [data-cid^='7895511-'] .un:after {
-    content: "Helper";
-    margin-left: 5px;
-    background: rgba(0, 0, 0, .5);
-    padding: 0px 5px;
-    border: 2px solid #ff0000;
-    border-radius: 5px;
-    color: #ccc;
-    font-size: 11px;
+#user-rollover.id-44172088 .meta {
+height : 170px !important ;
 }
 
-#user-rollover.id-7895511 .meta {
-    top: -50px;
+#chat .cm.message[data-cid^="44172088"] .msg .from .un {
+background-image : url(https://i.imgur.com/tRsXuEr.png);
+background-repeat : no-repeat;
+background-position : 0% center;
+top : 2px;
+z-index : 0;
+width : 15px;
+height : 15px;
+position : relative;
+padding-left : 42px;
 }
 
-#user-rollover.id-7895511 .joined:after {
-    position: absolute;
-    content: '» supporting » community »';
-    background-image: url();
-    background-repeat: no-repeat;
-    color: #ff0000;
-    margin: 75px 0 0 -103px;
-    padding-left: 19px;
-    font-weight: 400;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    font-size: 14px;
+#user-rollover.id-44172088 .meta:before {
+content : url(https://i.imgur.com/1SMpYDD.png);
+top : 130px;
+left : 109px;
+position : absolute;
 }
 
-/* Kimps ~ Hardstyle Heaven */
-
-#user-rollover.id-7895511 .level:after {
-    background-image: url();
-    background-repeat: no-repeat;
-    content: "TUSF";
-    display: inline-block;
-    color: #ff0000;
-    font-weight: bold;
-    margin: 0px 0px 0 14px;
-    padding-left: 19px;
-}
-
-/* D0RIT0S */
-
-#user-lists .list .user.id-3905933 .name:after, #user-rollover.id-3905933 .meta .username:after, #chat [data-cid^='3905933-'] .un:after {
-    content: "Helper/invites People/";
-    margin-left: 5px;
-    background: rgba(0, 0, 0, .5);
-    padding: 0px 5px;
-    border: 2px solid #ff0000;
-    border-radius: 5px;
-    color: #ccc;
-    font-size: 11px;
-}
-
-/* Chillout Susan */
-
-#user-lists .list .user.id-4849359 .name:after, #user-rollover.id-4849359 .meta .username:after, #chat [data-cid^='4849359-'] .un:after {
-    content: "Helper/Developer/ccs";
-    margin-left: 5px;
-    background: rgba(0, 0, 0, .5);
-    padding: 0px 5px;
-    border: 2px solid #ff0000;
-    border-radius: 5px;
-    color: #ccc;
-    font-size: 11px;
-}
-
-/* Flacki */
-
-#user-lists .list .user.id-41576692 .name:after, #user-rollover.id-41576692 .meta .username:after, #chat [data-cid^='41576692-'] .un:after {
-    content: "Helper";
-    margin-left: 5px;
-    background: rgba(0, 0, 0, .5);
-    padding: 0px 5px;
-    border: 2px solid #ff0000;
-    border-radius: 5px;
-    color: #ccc;
-    font-size: 11px;
-}
-
-/* Gertuk1 */
-
-#user-lists .list .user.id-21878762 .name:after, #user-rollover.id-21878762 .meta .username:after, #chat [data-cid^='21878762-'] .un:after {
-    content: "Helper/Moderator";
-    margin-left: 5px;
-    background: rgba(0, 0, 0, .5);
-    padding: 0px 5px;
-    border: 2px solid #ff0000;
-    border-radius: 5px;
-    color: #ccc;
-    font-size: 11px;
-}
-
-/* Tharon */
-
-#user-lists .list .user.id-6632231 .name:after, #user-rollover.id-6632231 .meta .username:after, #chat [data-cid^='6632231-'] .un:after {
-    content: "Helper";
-    margin-left: 5px;
-    background: rgba(0, 0, 0, .5);
-    padding: 0px 5px;
-    border: 2px solid #ff0000;
-    border-radius: 5px;
-    color: #ccc;
-    font-size: 11px;
-}
-
-#user-rollover.id-6632231 .level:after {
-    background-image: url();
-    background-repeat: no-repeat;
-    content: "TUSF";
-    display: inline-block;
-    color: #ff0000;
-    font-weight: bold;
-    margin: 0px 0px 0 14px;
-    padding-left: 19px;
+#user-rollover.id-44172088 .meta:after {
+content : 'Verified Producer \A Discord Linked';
+white-space : pre-wrap;
+color : #808691;
+position : absolute;
+top : 130px;
+left : 130px;
 }
