--- a/Custom.css
+++ b/Custom.css
@@ -9,7 +9,7 @@
     font-size: 11px;
     width: 300px;
     box-sizing: border-box;
-    content: "🔰 ToxicUltraSplashFoxy 🔰 | PlugThemed - red: V 6.2.14.3!";
+    content: "⚪13375P34K⚪ | PlugThemed - red: V 6.2.15.4!";
     font-weight: bold;
     padding: 5px;
     background-color: rgb(255, 0, 0);
