--- a/Supporters.css
+++ b/Supporters.css
@@ -21,7 +21,7 @@
 #user-rollover.id-40796598 .level:after {
     background-image: url(https://i.imgur.com/a2zR8CP.png);
     background-repeat: no-repeat;
-    content: "TUSF";
+    content: "13375P34K";
     display: inline-block;
     color: #ff0000;
     font-weight: bold;
@@ -75,7 +75,7 @@
 }
 
 #user-rollover.id-40796598 .meta:before {
-    content: url("https://i.imgur.com/lVc7TDE.jpg?1");
+    content: url("https://i.imgur.com/MUaFz2M.jpg?1");
     top: 190px;
     left: 109px;
     position: absolute;
