--- a/Theme.css
+++ b/Theme.css
@@ -56,7 +56,7 @@
 #preview-about .top-about {
     height: 350px;
     width: 100%;
-    background: url("https://cdn.pixabay.com/photo/2017/12/29/18/47/nature-3048299_960_720.jpg") no-repeat 0 0;
+    background: url("https://i.imgur.com/MOlLFSG.jpg") no-repeat 0 0;
     background-size: cover;
     background-position: center top;
     position: static;
@@ -441,17 +441,17 @@
 }
 
 .nav-left.shown {
-    background: url("https://cdn.pixabay.com/photo/2017/12/29/18/47/nature-3048299_960_720.jpg") no-repeat ;
+    background: url("https://i.imgur.com/MOlLFSG.jpg") no-repeat ;
     background-size: cover ;
 }
 
 #app .logo-wrapper .plugdj-logo {
-    background: url("https://i.imgur.com/a4fn1hj.png") no-repeat;
+    background: url("https://i.imgur.com/MOlLFSG.jpg") no-repeat;
     background-size: 21px 21px ;
 }
 
 .nav-left__top .plugdj-logo {
-    background: url("https://i.imgur.com/a4fn1hj.png") no-repeat 0 0;
+    background: url("https://i.imgur.com/MOlLFSG.jpg") no-repeat 0 0;
     background-size: 25px 25px ;
 }
 
