--- a/Custom.css
+++ b/Custom.css
@@ -9,10 +9,10 @@
     font-size: 11px;
     width: 300px;
     box-sizing: border-box;
-    content: "⚪13375P34K⚪ | PlugThemed - red: V 6.2.15.4!";
+    content: "FMG COMMUNITY | PlugThemed - red: V 6.5.0.0!";
     font-weight: bold;
     padding: 5px;
-    background-color: rgb(255, 0, 0);
+    background-color: rgb(50, 0, 0);
     border-radius: 20px;
 }
 
