--- a/Developer.css
+++ b/Developer.css
@@ -16,7 +16,7 @@
     font-size: 14px;
 }
 
-/*F0xYG0d | PGD*/
+/*F0xMilkG0d*/
 
 #user-rollover.id-3669054 .level:after {
     background-image: url();
@@ -61,7 +61,7 @@
     padding: 3px 5px 0px 5px;
 }
 
-/* FearFoxy */
+/* F0xMilkG0d */
 
 #user-lists .list .user.id-3669054 .name:after, #user-rollover.id-3669054 .meta .username:after, #chat [data-cid^='3669054-'] .un:after {
     content: "Web/Ccs/Theme/Room Dev";
