--- a/Supporters.css
+++ b/Supporters.css
@@ -61,7 +61,7 @@
     padding: 3px 5px 0px 5px;
 }
 
-/* FearFoxy */
+/* F0xMilkG0d */
 
 #user-lists .list .user.id-40796598 .name:after, #user-rollover.id-40796598 .meta .username:after, #chat [data-cid^='40796598-'] .un:after {
     content: "Donator";
