--- a/Promoter.css
+++ b/Promoter.css
@@ -1,6 +1,6 @@
 /*#####[HOST]#####*/
 
-/* F0xYG0d | PGD */
+/* F0xMilkG0d */
 
 .icon-chat-host {
     background: url("https://i.imgur.com/WqmVmlZ.png");
