--- a/Custom PP.css
+++ b/Custom PP.css
@@ -1,1 +1,33 @@
+/* --------------------------------------- item icon --------------------------------------- */
+
+.item-icon:nth-child(6) {
+    position: fixed;
+    bottom: 70px;
+    right: 310px;
+    z-index: 1000;
+}
+
+.item-icon:nth-child(6) .discord.icon-social {
+    height: 50px !important;
+    width: 50px !important;
+    position: absolute;
+    pointer-events: none;
+}
+
+.item-icon:nth-child(6) a {
+    height: 50px;
+    width: 50px;
+    color: transparent !important;
+}
+
+.item-icon:nth-child(6) i.plugdjfont.icon-discord {
+    background-image: url(https://www.shareicon.net/data/256x256/2016/10/18/844052_media_512x512.png);
+    height: 50px;
+    width: 50px;
+    background-size: 50px;
+}
+
+.item-icon:nth-child(6) .icon-discord:before {
+    content: " " !important;
+}
 
