--- a/Promoter.css
+++ b/Promoter.css
@@ -17,7 +17,7 @@
 }
 
 #user-rollover.id-3669054 .badge-box>i.bdg, .id-3669054>.badge-box>i.bdg {
-    background-image: url("https://i.imgur.com/OfxuKsE.png");
+    background-image: url("https://i.imgur.com/gWkLHN3.png?1");
     border-radius: 6px;
 }
 
