--- a/Users.css
+++ b/Users.css
@@ -4,7 +4,7 @@ ________________________________________________________________________________
 /* Skullyboy2 */
 
 #user-lists .list .user.id-44218992 .name:after, #user-rollover.id-44218992 .meta .username:after, #chat [data-cid^='44218992-'] .un:after {
-    content: "Helper/inviting people";
+    content: "Helper";
     margin-left: 5px;
     background: rgba(0, 0, 0, .5);
     padding: 0px 5px;
@@ -15,38 +15,38 @@ ________________________________________________________________________________
 }
 
 #user-rollover.id-44218992 .meta:before {
-content : url(https://i.imgur.com/wicLrfT.png);
-top : 130px;
-left : 109px;
-position : absolute;    
+    content: url(https://i.imgur.com/wicLrfT.png);
+    top: 130px;
+    left: 109px;
+    position: absolute;    
 }
 
 #user-rollover.id-44218992 .meta:after {
-content : 'Discord Linked';
-white-space : pre-wrap;
-color : #808691;
-position : absolute;
-top : 130px;
-left : 130px;
+    content: 'Discord Linked';
+    white-space: pre-wrap;
+    color: #808691;
+    position: absolute;
+    top: 112px;
+    left: 130px;
 }
 
 #user-rollover.id-44218992 .meta {
-height : 170px !important ;
+    height: 170px !important ;
 }
 
 #user-rollover.id-44218992 .meta:after {
-content : '\A Discord Linked';
-white-space : pre-wrap;
-color : #808691;
-position : absolute;
-top : 130px;
-left : 130px;
+    content: '\A Discord Linked';
+    white-space: pre-wrap;
+    color: #808691;
+    position: absolute;
+    top: 112px;
+    left: 130px;
 }
 
 /* MarkuzPlayZ */
 
 #user-lists .list .user.id-44172088 .name:after, #user-rollover.id-44172088 .meta .username:after, #chat [data-cid^='44172088-'] .un:after {
-    content: "Helper/inviting people";
+    content: "Helper";
     margin-left: 5px;
     background: rgba(0, 0, 0, .5);
     padding: 0px 5px;
