--- a/Custom.css
+++ b/Custom.css
@@ -3,226 +3,240 @@
  \--------------------------------------------------------------------------------*/
 
 .log:after {
-    position: relative;
-    font-family: Black Streamer;
-    margin-left: 10px;
-    font-size: 11px;
-    width: 300px;
-    box-sizing: border-box;
-    content: "FMG COMMUNITY | PlugThemed - red: V 6.5.0.0!";
-    font-weight: bold;
-    padding: 5px;
-    background-color: rgb(50, 0, 0);
-    border-radius: 20px;
+	position: relative;
+	font-family: Black Streamer;
+	margin-left: 10px;
+	font-size: 11px;
+	width: 300px;
+	box-sizing: border-box;
+	content: "FMG COMMUNITY | PlugThemed - red: V 6.5.0.0!";
+	font-weight: bold;
+	padding: 5px;
+	background-color: rgb(50, 0, 0);
+	border-radius: 20px;
 }
+
 
 /*--------------------------------------------------------------------------------\
 |		welcome & log & chat
  \--------------------------------------------------------------------------------*/
 
 #chat .cm.welcome {
-    top: 5px;
-    position: relative;
-    font-family: Black Streamer;
-    margin-left: 0px;
-    font-size: 12px;
-    width: 300px;
-    box-sizing: border-box;
-    font-weight: bold;
-    padding: 10px;
-    background-color: rgb(0, 0, 0,9);
-    border-radius: 60px;
+	top: 5px;
+	position: relative;
+	font-family: Black Streamer;
+	margin-left: 0px;
+	font-size: 12px;
+	width: 300px;
+	box-sizing: border-box;
+	font-weight: bold;
+	padding: 10px;
+	background-color: rgb(0, 0, 0, 9);
+	border-radius: 60px;
 }
 
 #chat .log {
-    background: linear-gradient(hsla(0, 0%, 0%, 0.9), hsla(0, 0%, 0%, 0.9)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.9)) ;
+	background: linear-gradient(hsla(0, 0%, 0%, 0.9), hsla(0, 0%, 0%, 0.9)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.9));
 }
 
 .cm strong {
-    color: #ff0000;
+	color: #ff0000;
 }
 
 .cm em {
-    color: #ff0000;
+	color: #ff0000;
 }
+
 
 /*--[moderation]--*/
 
 #chat .cm.moderation {
-    background: linear-gradient(hsla(225, 50%, 25%, 0.8), hsla(225, 50%, 15%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2)) ;
-    box-shadow: inset 0 0 0 1px hsl(225, 50%, 50%);
-    border: none ;
+	background: linear-gradient(hsla(225, 50%, 25%, 0.8), hsla(225, 50%, 15%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2));
+	box-shadow: inset 0 0 0 1px hsl(225, 50%, 50%);
+	border: none;
 }
 
 #chat .cm.moderation .timestamp {
-    color: hsl(225, 70%, 70%);
+	color: hsl(225, 70%, 70%);
 }
+
 
 /*--[user-action]--*/
 
 #chat .cm.user-action {
-    background: linear-gradient(hsla(225, 100%, 20%, 0.8), hsla(225, 100%, 10%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2)) ;
-    box-shadow: inset 0 0 0 1px hsla(0, 0%, 100%, 0.1);
+	background: linear-gradient(hsla(225, 100%, 20%, 0.8), hsla(225, 100%, 10%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2));
+	box-shadow: inset 0 0 0 1px hsla(0, 0%, 100%, 0.1);
 }
 
-#chat .cm.user-action .msg .from .un, #chat .cm.user-action .timestamp {
-    color: hsl(225, 90%, 70%) ;
+#chat .cm.user-action .msg .from .un,
+#chat .cm.user-action .timestamp {
+	color: hsl(225, 90%, 70%);
 }
 
 #chat .cm.emote {
-    background: linear-gradient(hsla(219, 100%, 20%, 0.8), hsla(219, 100%, 10%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2)) ;
-    border-left: none;
-    text-align: left;
-    box-shadow: inset 0 0 0 1px hsla(220, 100%, 50%, 0.5);
-    border: none ;
-}
-
-#chat .cm.emote .un, #chat .cm.emote .timestamp {
-    color: hsl(210, 100%, 60%) ;
-}
-
-#chat .cm.emote i {
-    display: inline ;
-}
-
-#chat .emote .text {
-    font-style: oblique ;
-}
-
-#chat .cm.mention.role-host {
-    background: linear-gradient(hsla(200, 100%, 30%, 0.8), hsla(200, 100%, 20%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2)) ;
-    box-shadow: inset 0 0 0 1px hsl(200, 50%, 50%);
-}
-
-#chat .cm.mention.role-host .name, #chat .cm.mention.role-host .timestamp {
-    color: #0078c7;
-}
-
-#chat .cm.mention.role-cohost {
-    background: linear-gradient(hsla(210, 100%, 30%, 0.8), hsla(210, 100%, 20%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2)) ;
-    box-shadow: inset 0 0 0 1px hsl(210, 50%, 50%);
-}
-
-#chat .cm.mention.role-cohost .name, #chat .cm.mention.role-cohost .timestamp {
-    color: #0078c7;
-}
-
-#chat .cm.mention.role-manager {
-    background: linear-gradient(hsla(350, 85%, 20%, 0.8), hsla(350, 85%, 10%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2)) ;
-    box-shadow: inset 0 0 0 1px hsl(350, 50%, 50%);
-}
-
-#chat .cm.mention.role-manager .name, #chat .cm.mention.role-manager .timestamp {
-    color: #21b1af;
-}
-
-#chat .cm.mention.role-bouncer {
-    background: linear-gradient(hsla(354, 100%, 20%, 0.8), hsla(354, 100%, 10%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2)) ;
-    box-shadow: inset 0 0 0 1px hsl(354, 50%, 50%);
-}
-
-#chat .cm.mention.role-bouncer .name, #chat .cm.mention.role-bouncer .timestamp {
-    color: #22ad3d;
-}
-
-#chat .cm.mention.role-dj {
-    background: linear-gradient(hsla(20, 100%, 30%, 0.8), hsla(20, 100%, 20%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2)) ;
-    box-shadow: inset 0 0 0 1px hsl(20, 50%, 50%);
-}
-
-#chat .cm.mention.role-dj .name, #chat .cm.mention.role-dj .timestamp {
-    color: #87a71b;
-}
-
-#chat .cm.mention.role-subscriber {
-    background: linear-gradient(hsla(40, 100%, 30%, 0.8), hsla(40, 100%, 20%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2)) ;
-    box-shadow: inset 0 0 0 1px hsl(30, 50%, 50%);
-}
-
-#chat .cm.mention.role-subscriber .name, #chat .cm.mention.role-subscriber .timestamp, #user-rollover .meta.subscriber .status span {
-    color: hsl(40, 100%, 100%);
-}
-
-#chat .cm.mention {
-    background: linear-gradient(hsla(77, 100%, 20%, 0.8), hsla(77, 100%, 11%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2)) ;
-    box-shadow: inset 0 0 0 1px hsl(77, 100%, 30%);
-    border: 2px solid #ff0000;
-}
-
-#chat .cm.mention .name, #chat .cm.mention .timestamp {
-    color: hsl(70, 100%, 100%);
-}
-
-#chat .cm.mention .msg .from .un {
-    color: hsl(70, 100%, 100%);
-}
-
-#chat .cm.mention .msg {
-    /*fix RCS*/
-    background: none ;
-}
-
-/*--[BOT]--*/
-
-#chat .cm.emote {
-    background: linear-gradient(hsla(219, 100%, 20%, 0.8), hsla(219, 100%, 10%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2)) !important;
-    border-left: none !important;
-    text-align: left;
-    box-shadow: inset 0 0 0 1px hsla(220, 100%, 50%, 0.5);
-    border: none !important;
+	background: linear-gradient(hsla(219, 100%, 20%, 0.8), hsla(219, 100%, 10%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2));
+	border-left: none;
+	text-align: left;
+	box-shadow: inset 0 0 0 1px hsla(220, 100%, 50%, 0.5);
+	border: none;
 }
 
 #chat .cm.emote .un,
 #chat .cm.emote .timestamp {
-    color: hsl(210, 100%, 60%) !important;
+	color: hsl(210, 100%, 60%);
 }
 
 #chat .cm.emote i {
-    display: inline !important;
+	display: inline;
 }
 
 #chat .emote .text {
-    font-style: oblique !important;
+	font-style: oblique;
+}
+
+#chat .cm.mention.role-host {
+	background: linear-gradient(hsla(200, 100%, 30%, 0.8), hsla(200, 100%, 20%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2));
+	box-shadow: inset 0 0 0 1px hsl(200, 50%, 50%);
+}
+
+#chat .cm.mention.role-host .name,
+#chat .cm.mention.role-host .timestamp {
+	color: #0078c7;
+}
+
+#chat .cm.mention.role-cohost {
+	background: linear-gradient(hsla(210, 100%, 30%, 0.8), hsla(210, 100%, 20%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2));
+	box-shadow: inset 0 0 0 1px hsl(210, 50%, 50%);
+}
+
+#chat .cm.mention.role-cohost .name,
+#chat .cm.mention.role-cohost .timestamp {
+	color: #0078c7;
+}
+
+#chat .cm.mention.role-manager {
+	background: linear-gradient(hsla(350, 85%, 20%, 0.8), hsla(350, 85%, 10%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2));
+	box-shadow: inset 0 0 0 1px hsl(350, 50%, 50%);
+}
+
+#chat .cm.mention.role-manager .name,
+#chat .cm.mention.role-manager .timestamp {
+	color: #21b1af;
+}
+
+#chat .cm.mention.role-bouncer {
+	background: linear-gradient(hsla(354, 100%, 20%, 0.8), hsla(354, 100%, 10%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2));
+	box-shadow: inset 0 0 0 1px hsl(354, 50%, 50%);
+}
+
+#chat .cm.mention.role-bouncer .name,
+#chat .cm.mention.role-bouncer .timestamp {
+	color: #22ad3d;
+}
+
+#chat .cm.mention.role-dj {
+	background: linear-gradient(hsla(20, 100%, 30%, 0.8), hsla(20, 100%, 20%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2));
+	box-shadow: inset 0 0 0 1px hsl(20, 50%, 50%);
+}
+
+#chat .cm.mention.role-dj .name,
+#chat .cm.mention.role-dj .timestamp {
+	color: #87a71b;
+}
+
+#chat .cm.mention.role-subscriber {
+	background: linear-gradient(hsla(40, 100%, 30%, 0.8), hsla(40, 100%, 20%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2));
+	box-shadow: inset 0 0 0 1px hsl(30, 50%, 50%);
+}
+
+#chat .cm.mention.role-subscriber .name,
+#chat .cm.mention.role-subscriber .timestamp,
+#user-rollover .meta.subscriber .status span {
+	color: hsl(40, 100%, 100%);
+}
+
+#chat .cm.mention {
+	background: linear-gradient(hsla(77, 100%, 20%, 0.8), hsla(77, 100%, 11%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2));
+	box-shadow: inset 0 0 0 1px hsl(77, 100%, 30%);
+	border: 2px solid #ff0000;
+}
+
+#chat .cm.mention .name,
+#chat .cm.mention .timestamp {
+	color: hsl(70, 100%, 100%);
+}
+
+#chat .cm.mention .msg .from .un {
+	color: hsl(70, 100%, 100%);
+}
+
+#chat .cm.mention .msg {
+	/*fix RCS*/
+	background: none;
+}
+
+
+/*--[BOT]--*/
+
+#chat .cm.emote {
+	background: linear-gradient(hsla(219, 100%, 20%, 0.8), hsla(219, 100%, 10%, 0.8)), linear-gradient(to right, hsla(0, 0%, 0%, 0), hsla(0, 0%, 100%, 0.2)) !important;
+	border-left: none !important;
+	text-align: left;
+	box-shadow: inset 0 0 0 1px hsla(220, 100%, 50%, 0.5);
+	border: none !important;
+}
+
+#chat .cm.emote .un,
+#chat .cm.emote .timestamp {
+	color: hsl(210, 100%, 60%) !important;
+}
+
+#chat .cm.emote i {
+	display: inline !important;
+}
+
+#chat .emote .text {
+	font-style: oblique !important;
 }
 
 
 /*### [message] ###*/
 
 #chat .cm {
-    animation: fadein 0.2s;
+	animation: fadein 0.2s;
 }
 
 #chat .cm {
-    background: linear-gradient(hsla(220, 10%, 20%, 0.5), hsla(220, 10%, 15%, 0.5));
-    box-shadow: inset 1px 1px 0 hsla(220, 10%, 20%, 0.8);
+	background: linear-gradient(hsla(220, 10%, 20%, 0.5), hsla(220, 10%, 15%, 0.5));
+	box-shadow: inset 1px 1px 0 hsla(220, 10%, 20%, 0.8);
 }
 
 #chat .cm.message:nth-child(odd) {
-    background: linear-gradient(hsla(220, 10%, 10%, 0.5), hsla(220, 10%, 12%, 0.5));
-    box-shadow: inset 1px 1px 0 hsla(220, 10%, 5%, 0.8);
-    color: #ccc;
+	background: linear-gradient(hsla(220, 10%, 10%, 0.5), hsla(220, 10%, 12%, 0.5));
+	box-shadow: inset 1px 1px 0 hsla(220, 10%, 5%, 0.8);
+	color: #ccc;
 }
 
 #chat .cm.message .timestamp {
-    color: #818285;
+	color: #818285;
 }
 
 #chat .cm .badge-box {
-    background: transparent !important;
+	background: transparent !important;
 }
 
 #chat .cm .delete-button {
-    border-radius: 4px;
-    background: linear-gradient(hsl(0, 0%, 30%), hsl(0, 0%, 40%));
-    box-shadow: inset 0 0 0 1px hsl(0, 0%, 50%);
+	border-radius: 4px;
+	background: linear-gradient(hsl(0, 0%, 30%), hsl(0, 0%, 40%));
+	box-shadow: inset 0 0 0 1px hsl(0, 0%, 50%);
 }
 
 #chat .cm .delete-button:hover {
-    background: linear-gradient(hsl(205, 100%, 40%), hsl(205, 100%, 30%));
-    box-shadow: inset 0 0 10px 1px hsla(0, 0%, 100%, 0.4);
-    color: #fff;
+	background: linear-gradient(hsl(205, 100%, 40%), hsl(205, 100%, 30%));
+	box-shadow: inset 0 0 10px 1px hsla(0, 0%, 100%, 0.4);
+	color: #fff;
 }
 
 #chat-messages {
-    border-bottom: #ff0000 2px solid;
+	border-bottom: #ff0000 2px solid;
 }
