--- a/Developer.css
+++ b/Developer.css
@@ -1,90 +1,95 @@
 #user-rollover.id-3669054 .meta {
-    height : 170px !important ;
+	height: 150px !important;
 }
 
 #user-rollover.id-3669054 .joined:after {
-    position: absolute;
-    content: 'FMG Community Owner';
-    background-image: url();
-    background-repeat: no-repeat;
-    color: #ff0000;
-    margin: 75px 0 0 -103px;
-    padding-left: 19px;
-    font-weight: 400;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    font-size: 14px;
+	position: absolute;
+	content: 'FMG Community Owner';
+	background-image: url();
+	background-repeat: no-repeat;
+	color: #ff0000;
+	margin: 75px 0 0 -103px;
+	padding-left: 19px;
+	font-weight: 400;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	font-size: 14px;
 }
 
 /*F0xMilkG0d*/
 
 #user-rollover.id-3669054 .level:after {
-    background-image: url();
-    background-repeat: no-repeat;
-    content: "FMG";
-    display: inline-block;
-    color: #ff0000;
-    font-weight: bold;
-    margin: 0px 0px 0 14px;
-    padding-left: 19px;
+	background-image: url();
+	background-repeat: no-repeat;
+	content: "FMG";
+	display: inline-block;
+	color: #ff0000;
+	font-weight: bold;
+	margin: 0px 0px 0 14px;
+	padding-left: 19px;
 }
 
-#user-rollover.id-3669054 .thumb, #user-rollover.id-3669054 .thumb {
-    shadow: 5px solid #ff0000;
-    border-color: #ff0000;
+#user-rollover.id-3669054 .thumb,
+#user-rollover.id-3669054 .thumb {
+	shadow: 5px solid #ff0000;
+	border-color: #ff0000;
 }
 
-#user-lists .list .user.id-3669054 .name, #user-rollover.id-3669054 .username, #chat [data-cid^='3669054-'] .un {
-    shadow: 5px solid #ff0000;
-    color: #ff0000;
+#user-lists .list .user.id-3669054 .name,
+#user-rollover.id-3669054 .username,
+#chat [data-cid^='3669054-'] .un {
+	shadow: 5px solid #ff0000;
+	color: #ff0000;
 }
 
 #user-rollover.id-3669054 .joined:before {
-    position: absolute;
-    content: 'Music Producer/Artist';
-    background-image: url();
-    background-repeat: no-repeat;
-    color: #ff0000;
-    margin: 97px 0 0 0px;
-    padding-left: 20px;
-    font-weight: 400;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    font-size: 15px;
+	position: absolute;
+	content: 'Music Producer/Artist';
+	background-image: url();
+	background-repeat: no-repeat;
+	color: #ff0000;
+	margin: 97px 0 0 0px;
+	padding-left: 20px;
+	font-weight: 400;
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	font-size: 15px;
 }
 
 #chat [data-cid^='3669054-'] .un:before {
-    content: url();
-    background-repeat: no-repeat;
-    background-size: 14px 14px;
-    margin: 100px 0 0 0px;
-    padding: 3px 5px 0px 5px;
+	content: url();
+	background-repeat: no-repeat;
+	background-size: 14px 14px;
+	margin: 100px 0 0 0px;
+	padding: 3px 5px 0px 5px;
 }
 
 /* F0xMilkG0d */
 
-#user-lists .list .user.id-3669054 .name:after, #user-rollover.id-3669054 .meta .username:after, #chat [data-cid^='3669054-'] .un:after {
-    content: "Room Dev";
-    margin-left: 3px;
-    background: rgba(0, 0, 0, .9);
-    padding: 0px 3px;
-    border: 2px solid #ff0000;
-    border-radius: 100px;
-    color: #ccc;
-    font-size: 11px;
+#user-lists .list .user.id-3669054 .name:after,
+#user-rollover.id-3669054 .meta .username:after,
+#chat [data-cid^='3669054-'] .un:after {
+	content: "Room Dev";
+	margin-left: 3px;
+	background: rgba(0, 0, 0, .9);
+	padding: 0px 3px;
+	border: 2px solid #ff0000;
+	border-radius: 100px;
+	color: #ccc;
+	font-size: 11px;
 }
 
 #user-rollover.id-3669054 .meta:before {
-    content: url("");
-    top: 190px;
-    left: 109px;
-    position: absolute;
+	content: url("");
+	top: 190px;
+	left: 109px;
+	position: absolute;
 }
 
 #user-rollover.id-3669054 .meta:after {
-    content: 'Christmas Event 2018-2019';
-    color: #b9290f;
-    position: absolute;
-    top: 190px;
-    left: 130px;
+	content: 'Christmas Event 2018-2019';
+	color: #b9290f;
+	position: absolute;
+	top: 190px;
+	left: 130px;
 }
