--- a/WAM.css
+++ b/WAM.css
@@ -1,76 +1,81 @@
 /*-dj button-*/
+
 .btn-no-dj-secondary.btn-no-dj-secondary__bottom {
-    height:51px;
-    width:140px;
-    position: absolute;
-    left: 40px;
-    background:#ff0000;
-    border-radius:2px 2px 2px 2px;
-    cursor:pointer;
-    line-height:59px;
-    z-index:8
-    margin-top: 5px;
-    padding: 10px;
-    background-color: rgba(0, 0, 0, 0.40);
-    color: rgba(0,255,0,.4);
-    border: 2px solid #ff0000;
-    border-radius: 10px;
+	height: 51px;
+	width: 140px;
+	position: absolute;
+	left: 40px;
+	background: #ff0000;
+	border-radius: 2px 2px 2px 2px;
+	cursor: pointer;
+	line-height: 59px;
+	z-index: 8 margin-top: 5px;
+	padding: 10px;
+	background-color: rgba(0, 0, 0, 0.40);
+	color: rgba(0, 255, 0, .4);
+	border: 2px solid #ff0000;
+	border-radius: 10px;
 }
-.btn-no-dj-primary.btn-no-dj-secondary__bottom:hover, .btn-no-dj-secondary.btn-no-dj-secondary__bottom:hover {
-    background-color: #000000;
 
+.btn-no-dj-primary.btn-no-dj-secondary__bottom:hover,
+.btn-no-dj-secondary.btn-no-dj-secondary__bottom:hover {
+	background-color: #000000;
 }
-.btn-no-dj-secondary.btn-no-dj-secondary__bottom:before{
-    content: " ";
-    position:absolute;
-    left: -45px;
-    top: -5px;
-    width:32px;
-    height:28px;;
-    border-radius:2px 0 0 2px;
-    margin-top: 5px;
-    padding: 10px;
-    background-color: rgba(0, 0, 0, 0.90);
-    color: rgba(255,255,255,.1);
-    border: 2px solid #ff0000;
-    border-radius: 10px;
-    background:#ff0000;
-    background:-moz-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background:-webkit-gradient(linear,left top,left bottom,color-stop(0,#00b5e6),color-stop(100%,#009cdd));
-    background:-webkit-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background:-o-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background:-ms-linear-gradient(top,#00b5e6 0,#009cdd 100%);
-    background:linear-gradient(to bottom,#00b5e6 0,#009cdd 100%)
-}
- 
-.btn-no-dj-secondary.btn-no-dj-secondary__bottom .room-controls__bottom-text{
-    margin-left:5px;
-    width:148px;
-    width:148px;
-    font-size:13px;
-    line-height:25x;
-    font-weight: 0;
-    text-align:center;
-    display:inline-block;
-    vertical-align:middle;
-    font-family: 'Open Sans',sans-serif !important;
-    text-transform: none;
 
+.btn-no-dj-secondary.btn-no-dj-secondary__bottom:before {
+	content: " ";
+	position: absolute;
+	left: -45px;
+	top: -5px;
+	width: 32px;
+	height: 28px;
+	;
+	border-radius: 2px 0 0 2px;
+	margin-top: 5px;
+	padding: 10px;
+	background-color: rgba(0, 0, 0, 0.90);
+	color: rgba(255, 255, 255, .1);
+	border: 2px solid #ff0000;
+	border-radius: 10px;
+	background: #ff0000;
+	background: -moz-linear-gradient(top, #00b5e6 0, #009cdd 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #00b5e6), color-stop(100%, #009cdd));
+	background: -webkit-linear-gradient(top, #00b5e6 0, #009cdd 100%);
+	background: -o-linear-gradient(top, #00b5e6 0, #009cdd 100%);
+	background: -ms-linear-gradient(top, #00b5e6 0, #009cdd 100%);
+	background: linear-gradient(to bottom, #00b5e6 0, #009cdd 100%)
 }
+
+.btn-no-dj-secondary.btn-no-dj-secondary__bottom .room-controls__bottom-text {
+	margin-left: 5px;
+	width: 148px;
+	width: 148px;
+	font-size: 13px;
+	line-height: 25x;
+	font-weight: 0;
+	text-align: center;
+	display: inline-block;
+	vertical-align: middle;
+	font-family: 'Open Sans', sans-serif !important;
+	text-transform: none;
+}
+
 .btn-no-dj-secondary__icon {
-    display: none;
+	display: none;
 }
- 
-.room-controls__bottom-item.dj-button.is-full .btn-no-dj-secondary.btn-no-dj-secondary__bottom:before, .room-controls__bottom-item.dj-button.is-locked .btn-no-dj-secondary.btn-no-dj-secondary__bottom:before {
-    background:#ff0000
+
+.room-controls__bottom-item.dj-button.is-full .btn-no-dj-secondary.btn-no-dj-secondary__bottom:before,
+.room-controls__bottom-item.dj-button.is-locked .btn-no-dj-secondary.btn-no-dj-secondary__bottom:before {
+	background: #ff0000
 }
- 
-.room-controls__bottom-item.dj-button.is-leave .btn-no-dj-secondary.btn-no-dj-secondary__bottom:before, .room-controls__bottom-item.dj-button.is-quit .btn-no-dj-secondary.btn-no-dj-secondary__bottom:before {
-    background:#ff0000;
-    background:-moz-linear-gradient(top,#f46b40 0,#ff0000 100%);
-    background:-webkit-gradient(linear,left top,left bottom,color-stop(0,#f46b40),color-stop(100%,#ff0000));
-    background:-webkit-linear-gradient(top,#f46b40 0,#ff0000 100%);
-    background:-o-linear-gradient(top,#f46b40 0,#ff0000 100%);
-    background:-ms-linear-gradient(top,#f46b40 0,#ff0000 100%);
-    background:linear-gradient(to bottom,#f46b40 0,#ff0000 100%)
+
+.room-controls__bottom-item.dj-button.is-leave .btn-no-dj-secondary.btn-no-dj-secondary__bottom:before,
+.room-controls__bottom-item.dj-button.is-quit .btn-no-dj-secondary.btn-no-dj-secondary__bottom:before {
+	background: #ff0000;
+	background: -moz-linear-gradient(top, #f46b40 0, #ff0000 100%);
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #f46b40), color-stop(100%, #ff0000));
+	background: -webkit-linear-gradient(top, #f46b40 0, #ff0000 100%);
+	background: -o-linear-gradient(top, #f46b40 0, #ff0000 100%);
+	background: -ms-linear-gradient(top, #f46b40 0, #ff0000 100%);
+	background: linear-gradient(to bottom, #f46b40 0, #ff0000 100%)
 }
